--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -20,7 +20,7 @@
 
         <div class="buttons">
 <!-- Link to add a new item -->
-            <a href="{{ url_for('inventory') }}">
+            <a href="{{ url_for('view_inventory') }}">
                 <button>View Inventory</button>   
             </a>
 <!-- Link to remove an item -->
