--- a/src/templates/inventory.html
+++ b/src/templates/inventory.html
@@ -3,6 +3,8 @@
 <head>
     <title>Inventory</title>
 </head>
+
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 <body>
     <h1>Inventory</h1>
 
