--- a/src/templates/inventory.html
+++ b/src/templates/inventory.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Inventory</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 </head>
 
     
