--- a/src/static/styles.css
+++ b/src/static/styles.css
@@ -10,6 +10,18 @@ body {
     text-align: center;
 }
 
+.inventory-wrapper {
+    display: flex;
+    flex-direction: column;   
+    align-items: center;      
+    margin-top: 60px;
+}
+
+.inventory-wrapper h1 {
+    font-size: 48px;
+    margin-bottom: 30px;
+}
+
 button {
     padding: 8px 12px;
     margin-right: 5px;
