--- a/src/templates/inventory.html
+++ b/src/templates/inventory.html
@@ -33,6 +33,15 @@
                         <td>{{ unit.source }}</td>
                         <td>{{ unit.size }}</td>
                     </tr>
+                    
+                    <tr>
+                        <td>1</td>
+                        <td>Rice</td>
+                        <td>Food</td>
+                        <td>12/31/2025</td>
+                        <td>Donation</td>
+                        <td>50</td>
+                    </tr>
                 {% endfor %}
             </tbody>
         </table>
