removed table row

--- a/src/templates/inventory.html
+++ b/src/templates/inventory.html
@@ -9,7 +9,7 @@
 <body>
 
     <div class="inventory-wrapper">
-        <h1>Inventory</h1>
+        <h1>Inventory Database</h1>
 
         <table border="1">
             <thead>
@@ -34,14 +34,7 @@
                         <td>{{ unit.size }}</td>
                     </tr>
                     
-                    <tr>
-                        <td>1</td>
-                        <td>Rice</td>
-                        <td>Food</td>
-                        <td>12/31/2025</td>
-                        <td>Donation</td>
-                        <td>50</td>
-                    </tr>
+
                 {% endfor %}
             </tbody>
         </table>
