css html things

--- a/src/templates/inventory.html
+++ b/src/templates/inventory.html
@@ -18,15 +18,16 @@
             <input type="text" name="source" placeholder="Source" required>
             <input type="number" name="quantity" placeholder="Quantity" required>
             <button type="submit">Add Item</button>
+            <button type="delete">Remove Checked Items</button>
         </form>
         <div class="table_container">
-            <table class="inventory_table"
+            <table class="inventory_table">
                 <thead>
                     <tr>
                         <th>Item ID</th>
                         <th>Name</th>
                         <th>Category</th>
-                        <th>Expiration Date</th>
+                        <th>Expiration</th>
                         <th>Source</th>
                         <th>Quantity</th>
                     </tr>
