--- a/src/static/styles.css
+++ b/src/static/styles.css
@@ -21,22 +21,27 @@ body {
     font-size: 48px;
     margin-bottom: 30px;
 }
-
-.inventory_table {
-    border-collapse: collapse;
-    width: 80%;
-    background-color: antiquewhite;
-    color: black;
-    border-radius: 10px;
-    overflow:hidden;
-    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
-}
-
 .table_container {
+    width: 100%;
     display: flex;
     justify-content: center;
-    margin-top: 20px;
 }
+.inventory_table {
+    width: 90%;
+    border-collapse: collapse;
+    margin-top: 20px;
+    background-color: #ffffff0d;
+    border:2px solid #f4f8f9;
+    border-radius: 8px;
+    overflow: hidden;
+    table-layout:fixed;
+}
+
+.inventory_table th, .inventory_table td {
+    padding: 12px 15px;
+    border: 1px solid #f4f8f9;
+    text-align: center;
+    font-size: 16px;
 
 button {
     padding: 8px 12px;
